# streamlit-emoji-float

./: LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt
sample/: demo.py
streamlit_emoji_float/: __init__.py  pyproject.toml
streamlit_emoji_float/frontend/: package-lock.json  package.json  vite.config.ts
streamlit_emoji_float/frontend/src/: EmojiFloat.tsx  floatEmoji.ts  index.tsx
tests/: test_emoji_float.py
