[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-emoji-float"
version = "0.1.0"
description = "Streamlit component that animates emojis, making them float on your Streamlit app."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Juncel Datinggaling"}]
dependencies = ["streamlit >= 1.51"]
keywords = ["streamlit", "emoji", "animation", "component"]
[project.urls]
Homepage = "https://github.com/j-ncel/streamlit-emoji-float"
Repository = "https://github.com/j-ncel/streamlit-emoji-float"
Issues = "https://github.com/j-ncel/streamlit-emoji-float/issues"

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["streamlit_emoji_float*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
my_component = ["frontend/build/**/*", "pyproject.toml"]
